Update to images, fix landing spacing issue

--- a/_sass/_responsive.sass
+++ b/_sass/_responsive.sass
@@ -195,6 +195,9 @@
           font-size: 0.9rem
 
       .title-panel
+        .page-content-width p
+          padding: 3em 1em 0
+
         .profile-photo
           max-width: 6em
           max-height: 6em
@@ -409,25 +412,25 @@
           max-width: 5em
           max-height: 5em
 
-        .key-skills.page-content-width
-          padding: 0 0.2em
+        .page-content-width
+          padding: 0 0.5em
 
           p
             padding: 2em 0 0 0
 
-          .skills-list
-            margin-top: 3em
-            padding: 1em 0
-            border: 1px solid var(--pale-text-bg)
-            border-left-color: transparent
-            border-right-color: transparent
+        .skills-list
+          margin-top: 3em
+          padding: 1em 0.8em
+          border: 1px solid var(--pale-text-bg)
+          border-left-color: transparent
+          border-right-color: transparent
 
-            span
-              display: none
+          span
+            display: none
 
-            .skill
-              font-size: 0.75rem
-              padding: 0 0.5em
+          .skill
+            font-size: 0.75rem
+            padding: 0 0.4em
 
     #featured .feature-case-study
       grid-template-columns: 1fr
